[Fixed] v1.6 errors in local search method